<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/mobile"
    />
<EditText android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/number1"
    android:id="@+id/mobile"
    />
<Button android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/button1"
    android:id="@+id/button1"
    /> 
    <!-- 第二部分 -->
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/number2"
    />
<EditText
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/number2"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/content"
    />
<EditText
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:minLines="3"
    android:id="@+id/content"
    />
<Button  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/button2"
    android:id="@+id/button2"
    />
</LinearLayout>
